--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -21,11 +21,16 @@
     "footer";
 }
 
+* html body {
+	background-color: red;
+	}
+
 html, body {
     width: 100%;
     height: 100%;
 	padding: 0px 0px;
-	margin: 0 auto;    
+	margin: 0 auto;   
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 a {
@@ -41,7 +46,6 @@ header {
 	grid-area: header; 
 	background-color: #333333;
 	padding: 10px 0;
-	/* background: linear-gradient(#000, #4a4a4a, #000); */
 }
 
 header h1 a{
@@ -54,12 +58,12 @@ header h1{
 	margin-left: 20px;
 }
 
-content { 
+main { 
 	grid-area: content; 
 	background-color: #151515;
 }
 
-content h2 {
+main h2 {
 	color: #708c2f;
 }
 
@@ -88,21 +92,37 @@ ul {
 	padding: 0;
 }
 
+pre {
+	white-space: pre-wrap;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+li.memo {
+	list-style-type: none;
+	color: crimson;
+	font-weight: bold;
+}
+
 li.sign  {
 	list-style-type: none;
 	display: inline-block;
 	margin: 0px 2em;
 }
 
-.txtArea {
+.kw_text_input {
 	background-color: #e1e1e1;
 	width: 100%;
 	max-width: 100%;
 	min-width: 50%;
 	max-height: 150px;
 	min-height: 50px;
-	height: 100px;
 	border-radius: 10px;
+	border: 1px solid #999999;
+	padding: 3px ;
+}
+
+input:focus-visible {
+    border: 1px solid #910000;
 }
 
 .validate {
@@ -124,7 +144,24 @@ li.sign  {
 	-moz-box-shadow: -1px 1px 4px -2px rgba(0,0,0,0.52);
 }
 
-@media only screen and (max-width: 600px) {
+.notFound {
+	max-width: 100%;
+	height: auto;
+}
+
+
+#map {
+	width: auto;
+	border-radius: 4px;
+	-webkit-box-shadow: 2px 2px 20px 2px #686868; 
+	box-shadow: 2px 2px 20px 2px #686868;
+}
+
+#response {
+	display: none;
+}
+
+@media only screen and (max-width: 800px) {
 	header h1 {
 		margin: 0;
 			margin-left: 0px;
@@ -137,7 +174,7 @@ li.sign  {
 		transition: all 2s 0s ease;
 	}
 
-	.thematic { /* temporary content */
+	.thematic { 
 		margin: 2% 5%;
 		padding: 5px 5px;	
 		border-radius: 4px;
