--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,41 +1,45 @@
 {% extends "base.html" %}
 
+{% block googleJS %}
+<script src="{{ url_for('static', filename='scripts_js/google_maps.js') }}"></script>
+{% endblock %}
 
-{% block content %}
-
-<h2>Parcours utilisateur</h2>
-<p>L'utilisateur ouvre son navigateur et entre l'URL que vous lui avez fournie. Il arrive devant une
-    page contenant les éléments suivants :<br>
-    header : logo et phrase d'accroche <br>
-    zone centrale : zone vide (qui servira à afficher le dialogue) et champ de formulaire pour envoyer
-    une question. <br>
-    footer : votre prénom & nom, lien vers votre repository Github et autres réseaux sociaux si vous en
-    avez <br>
-<p>L'utilisateur tape
-<blockquote>"Salut GrandPy ! Est-ce que tu connais l'adresse d'OpenClassrooms ?"</blockquote> dans le
-champ de formulaire puis appuie sur la touche Entrée. Le message s'affiche dans la zone du dessus qui
-affiche tous les messages échangés. Une icône tourne pour indiquer que GrandPy est en train de
-réfléchir.</p>
-<p>Puis un nouveau message apparaît :
-<blockquote>"Bien sûr mon poussin ! La voici : 7 cité Paradis, 75010 Paris."</blockquote>
-</p>
-<p>En-dessous, une carte Google Maps apparaît également avec un marqueur indiquant l'adresse
-    demandée.<br>
-    GrandPy envoie un nouveau message :
-<blockquote>"Mais t'ai-je déjà raconté l'histoire de ce quartier qui m'a vu en culottes courtes ? La
-    cité Paradis est une voie publique située dans le 10e arrondissement de Paris. Elle est en forme de
-    té, une branche débouche au 43 rue de Paradis, la deuxième au 57 rue d'Hauteville et la troisième en
-    impasse."</blockquote>
-</p>
-
+{% block header %}
+<header>
+    <h1><a href="{{ url_for('index') }}">{{ title }}</a></h1>
+</header>
 {% endblock %}
 
 {% block search %}
-<h2>Que voulez-vous savoir ?</h2>
-<form action="" method="post" novalidate>
-    <p>
-        {{ form.txt_area(class_="txtArea") }}<br>
-    <p>{{ form.submit(class_="validate") }}</p>
-    </p>
-</form>
+<div class="thematic">
+    <h2 id="wdyw">Découvrir un lieu, en connaître plus à son sujet ?</h2>
+    <form id="form-quest" enctype="multipart/form-data">
+        <input type="text" id="inputQuest" class="text-input" name="quest" placeholder="Posez moi votre question"
+            required>
+        <p><input type="submit" class="validate" value="Rechercher"></p>
+    </form>
+</div>
+{% endblock %}
+
+{% block response %}
+<div class="thematic" id="response">
+    <h2 id="greetings"></h2>
+    <div id="map"></div>
+    <blockquote>
+        <pre id="respText"></pre>
+    </blockquote>
+</div>
+{% endblock %}
+
+{% block postJS %}
+<script src="{{ url_for('static', filename='scripts_js/post_data.js') }}"></script>
+{% endblock %}
+
+{% block footer %}
+<footer>
+    <ul>
+        <li class="sign"><a href="https://github.com/Jerome-LorD/P7_GrandPy"> Jérome-LorD on Github</a></li>
+        <li class="sign">2021 OC GrandPy Project</li>
+    </ul>
+</footer>
 {% endblock %}
