--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
 	<div class="grid-container" id="container">
 		{% block header %}{% endblock %}
 		<main>
-			<article>
+			<article id="art">
 				{% block notFound %}{% endblock %}
 				{% block response %}{% endblock %}
 				{% block search %}{% endblock %}
