--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -3,18 +3,13 @@
 	outline: 0;
 }
 
-.row:after {
-    content: "";
-    clear: both;
-    display: block;
-}
-
 .grid-container {
   display: grid;
   min-height: 100%;
   grid-template-columns: 100%;
   grid-template-rows: auto 1fr auto;
   gap: 0px 0px;
+  cursor: auto;
   grid-template-areas:
     "header"
     "content"
@@ -54,6 +49,17 @@ header h1{
 	margin-left: 20px;
 }
 
+.sub-logo {
+	font-size: .9em;
+	margin: 6px 0 15px 2em;
+	padding:.2em;
+	color: green;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;	
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	}
+
 main { 
 	grid-area: content; 
 	background-color: #151515;
@@ -78,10 +84,24 @@ footer {
 	cursor: auto;
 }
 
-blockquote {
-	background-color: #9b9b9b;
-	padding: 5px 5px;
-	border-radius: 7px;
+.resp_indiv {
+	margin: 2% 20%;
+	padding: 5px 5px;	
+	border-radius: 4px;
+	background-color: #b5b5b5;
+	cursor: auto;	
+}
+
+.resp_indiv::before {
+	content:"👴";
+	background-size: 1em 1em;
+	color:white;  
+	background-color: rgba(0, 0, 0, 0);
+	position: relative;
+	left: -5px;
+	margin-left: 5px;
+	margin-bottom: -1px;
+	border-radius:3px;	
 }
 
 ul {
@@ -92,12 +112,6 @@ ul {
 pre {
 	white-space: pre-wrap;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-li.memo {
-	list-style-type: none;
-	color: crimson;
-	font-weight: bold;
 }
 
 li.sign  {
@@ -149,12 +163,29 @@ input:focus-visible {
 
 #map {
 	width: auto;
+	height: 0px;
 	border-radius: 4px;
-	-webkit-box-shadow: 2px 2px 20px 2px #686868; 
-	box-shadow: 2px 2px 20px 2px #686868;
+	margin: 2% 20%;
+	border-radius: 4px;
+	background-color: #b5b5b5;
+	cursor: auto;	
 }
 
-#response {
+.map {
+	width: auto;
+	height: 400px;
+	border-radius: 4px;
+	margin: 2% 20%;
+	background-color: #b5b5b5;
+	cursor: auto;
+	display: block;	
+}
+
+.map:last-child {
+	border-radius: 4px;
+}
+
+#resp {
 	display: none;
 }
 
@@ -164,11 +195,15 @@ input:focus-visible {
 			margin-left: 0px;
 		font-family: 'Indie Flower', cursive;
 		margin-left: 20px;
-		font-size: 1em;
+		font-size: 1.4em;
 		-webkit-transition: all 2s 0s ease;
 		-moz-transition: all 2s 0s ease;
 		-o-transition: all 2s 0s ease;
 		transition: all 2s 0s ease;
+	}
+
+	h2 {
+		font-size: 1.2em;
 	}
 
 	.thematic { 
@@ -178,11 +213,24 @@ input:focus-visible {
 		background-color: #b5b5b5;
 	}
 
-	blockquote {
-		background-color: #9b9b9b;
-		padding: 5px 5px;
-		border-radius: 7px;
-	}
+	.resp_indiv {
+		margin: 2% 5%;
+		padding: 5px 5px;	
+		border-radius: 4px;
+		background-color: #b5b5b5;
+		cursor: auto;	
+	}	
 
+	#map {
+		width: auto;
+		border-radius: 4px;
+		-webkit-box-shadow: 2px 2px 20px 2px #686868; 
+		box-shadow: 2px 2px 20px 2px #686868;
+		margin: 2% 5%;
+		padding: 5px 5px;	
+		border-radius: 4px;
+		background-color: #b5b5b5;
+		cursor: auto;	
+	}
 }
 
