--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -8,7 +8,7 @@
   min-height: 100%;
   grid-template-columns: 100%;
   grid-template-rows: auto 1fr auto;
-  gap: 0px 0px;
+  gap: 0 0;
   cursor: auto;
   grid-template-areas:
     "header"
@@ -19,7 +19,7 @@
 html, body {
     width: 100%;
     height: 100%;
-	padding: 0px 0px;
+	padding: 0 0;
 	margin: 0 auto;   
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -44,15 +44,14 @@ text-decoration:none;
 }
 
 header h1{
-	margin: 0;
+	margin: 0 0 0 20px;
 	font-family: 'Indie Flower', cursive;
-	margin-left: 20px;
 }
 
 .sub-logo {
-	font-size: .9em;
+	font-size: 0.9em;
 	margin: 6px 0 15px 2em;
-	padding:.2em;
+	padding: 0.2em;
 	color: green;
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;	
@@ -117,7 +116,7 @@ pre {
 li.sign  {
 	list-style-type: none;
 	display: inline-block;
-	margin: 0px 2em;
+	margin: 0 2em;
 }
 
 .text_input {
@@ -128,12 +127,12 @@ li.sign  {
 	max-height: 150px;
 	min-height: 50px;
 	border-radius: 10px;
-	border: 1px solid #999999;
+	border: #999999 1px solid;
 	padding: 3px ;
 }
 
 input:focus-visible {
-    border: 1px solid #910000;
+    border: #910000 solid 1px;
 }
 
 .validate {
@@ -150,9 +149,7 @@ input:focus-visible {
 .validate:hover {
 	background-color: #628f33;
 	color: #e1e1e1;
-	box-shadow: -1px 1px 4px -2px rgba(0,0,0,0.52);
-	-webkit-box-shadow: -1px 1px 4px -2px rgba(0,0,0,0.52);
-	-moz-box-shadow: -1px 1px 4px -2px rgba(0,0,0,0.52);
+	box-shadow: -1px 1px 4px -2px rgba(0, 0, 0, 0.52);
 }
 
 .not_found {
@@ -180,14 +177,7 @@ input:focus-visible {
 
 @media only screen and (max-width: 800px) {
 	header h1 {
-		margin: 0;
-			margin-left: 0px;
-		font-family: 'Indie Flower', cursive;
-		margin-left: 20px;
 		font-size: 1.4em;
-		-webkit-transition: all 2s 0s ease;
-		-moz-transition: all 2s 0s ease;
-		-o-transition: all 2s 0s ease;
 		transition: all 2s 0s ease;
 	}
 
@@ -196,33 +186,37 @@ input:focus-visible {
 	}
 
 	.thematic { 
-		margin: 2% 5%;
-		padding: 5px 5px;	
-		border-radius: 4px;
-		background-color: #b5b5b5;
+		margin-right: 5%;
+		margin-left: 5%;
 	}
 
 	.resp_indiv {
-		margin: 2% 5%;
-		padding: 5px 5px;	
-		border-radius: 4px;
-		background-color: #b5b5b5;
-		cursor: auto;	
+		margin-right: 5%;
+		margin-left: 5%;
 	}	
 
 	.map {
-		width: auto;
 		border-radius: 4px;
-		-webkit-box-shadow: 2px 2px 20px 2px #686868; 
 		box-shadow: 2px 2px 20px 2px #686868;
-		margin: 2% 5%;
+		margin-right: 5%;
+		margin-left: 5%;
 		padding: 5px 5px;	
 		border-radius: 4px;
-		background-color: #b5b5b5;
-		cursor: auto;	
 	}
+
 	.map:last-child {
 		border-radius: 4px;
 	}
 }
 
+@media only screen and (max-width: 350px) {
+
+	.sub-logo {
+		display: none;
+		}
+	
+	.validate {
+		width: 100%;
+	}
+
+}
